react_appwrite_blog_app

--- a/.env
+++ b/.env
@@ -5,16 +5,16 @@
 
 # Vite app method
 VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1" # end point
-VITE_APPWRITE_PROJECT_ID = "65a7833c1e72a01b1cba"
-VITE_APPWRITE_DATABASE_ID = "65a784cf44aeffcafd8c"
-VITE_APPWRITE_COLLECTION_ID = "65a7851c445227bf85ff"
-VITE_APPWRITE_BUCKET_ID = "65a787f0c358e27dfe0b"
+VITE_APPWRITE_PROJECT_ID = "65af3c4894080c2a5fcf"
+VITE_APPWRITE_DATABASE_ID = "65af4b4c26abac8ece6a"
+VITE_APPWRITE_COLLECTION_ID = "65af4b80b51fb4c982b0"
+VITE_APPWRITE_BUCKET_ID = "65af4d44e8d15c2d0519"
 
 # now go to appwrite site and create new project
 # and copy endpoint and project id and paste here  
 # now go to auth there
 # now go to database and create new and copy its id and paste here
-# now cteate a collection name article in blod there and copy paste id here
+# now cteate a collection name article in blog there and copy paste id here
 # now go to settings of article collection and read access permission change kro ki kon kon use read and access kr skte hai select user and everything in it
 # now create a attribute in article collection named : title, content, featuredimage, status
 # now create a index in article collection names status
