--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@
 
 # Vite app method
 VITE_APPWRITE_URL = "https://cloud.appwrite.io/v1" # end point
-VITE_APPWRITE_PROJECT_ID = "65af3c4894080c2a5fcf"
-VITE_APPWRITE_DATABASE_ID = "65af4b4c26abac8ece6a"
-VITE_APPWRITE_COLLECTION_ID = "65af4b80b51fb4c982b0"
+VITE_APPWRITE_PROJECT_ID = "65af3c4894080c2a5fcf" #project id
+VITE_APPWRITE_DATABASE_ID = "65af4b4c26abac8ece6a" # database id
+VITE_APPWRITE_COLLECTION_ID = "65af4b80b51fb4c982b0" # collection id
 VITE_APPWRITE_BUCKET_ID = "65af4d44e8d15c2d0519"
 
 # now go to appwrite site and create new project
